--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,5 @@
 AllCops:
   TargetRubyVersion: 2.3.8
-  NewCops: enable
 
 Style/StringLiterals:
   Enabled: true
@@ -18,3 +17,16 @@ Style/ModuleFunction:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/AbcSize:
+  Max: 20
+
+Naming/FileName:
+  Exclude:
+    - lib/fun-ruby.rb
+
+Style/DocumentationMethod:
+  Enabled: true
