--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,11 @@ jobs:
       - name: Bundle install
         run: bundle install --jobs 4 --retry 3
 
-      - name: Run tests
+      - name: Rubocop
+        run: bin/rubocop
+
+      - name: Rspec
         run: bin/rspec
 
-      - name: Run doc tests
+      - name: Doc tests
         run: bin/yard doctest
