--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           ruby-version: ${{matrix.ruby}}
           bundler-cache: true
-          run: bundle install --without-development
+          bundler: --without-development
 
       - name: Rubocop
         run: bin/rubocop
